--- a/css/default.css
+++ b/css/default.css
@@ -1,99 +1,35 @@
-/*
+.tabs .indicator {
+    background-color: #ffffff;
+  }
 
-Original highlight.js style (c) Ivan Sagalaev <maniac@softwaremaniacs.org>
+  h1,
+  h2,
+  h3,
+  h4,
+  h5 {
+    color: rgb(255, 128, 171);
+  }
 
-*/
+  h1 {
+    font-size: 3.2rem;
+  }
 
-.hljs {
-  display: block;
-  overflow-x: auto;
-  padding: 0.5em;
-  background: #F0F0F0;
-}
+  h2 {
+    font-size: 2.56rem;
+  }
 
+  h3 {
+    font-size: 2.02rem;
+  }
 
-/* Base color: saturation 0; */
+  h4 {
+    font-size: 1.58rem;
+  }
 
-.hljs,
-.hljs-subst {
-  color: #444;
-}
+  h5 {
+    font-size: 1.24rem;
+  }
 
-.hljs-comment {
-  color: #888888;
-}
-
-.hljs-keyword,
-.hljs-attribute,
-.hljs-selector-tag,
-.hljs-meta-keyword,
-.hljs-doctag,
-.hljs-name {
-  font-weight: bold;
-}
-
-
-/* User color: hue: 0 */
-
-.hljs-type,
-.hljs-string,
-.hljs-number,
-.hljs-selector-id,
-.hljs-selector-class,
-.hljs-quote,
-.hljs-template-tag,
-.hljs-deletion {
-  color: #880000;
-}
-
-.hljs-title,
-.hljs-section {
-  color: #880000;
-  font-weight: bold;
-}
-
-.hljs-regexp,
-.hljs-symbol,
-.hljs-variable,
-.hljs-template-variable,
-.hljs-link,
-.hljs-selector-attr,
-.hljs-selector-pseudo {
-  color: #BC6060;
-}
-
-
-/* Language color: hue: 90; */
-
-.hljs-literal {
-  color: #78A960;
-}
-
-.hljs-built_in,
-.hljs-bullet,
-.hljs-code,
-.hljs-addition {
-  color: #397300;
-}
-
-
-/* Meta color: hue: 200 */
-
-.hljs-meta {
-  color: #1f7199;
-}
-
-.hljs-meta-string {
-  color: #4d99bf;
-}
-
-
-/* Misc effects */
-
-.hljs-emphasis {
-  font-style: italic;
-}
-
-.hljs-strong {
-  font-weight: bold;
-}
+  h6 {
+    font-size: 1rem;
+  }
